--- a/.gitignore
+++ b/.gitignore
@@ -167,8 +167,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-data/
-logs/
+/data/
+/logs/
 
 # PyPI configuration file
 .pypirc
